# differential_drive_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml
launch/: robot.launch.py
model/: robot.xacro
